# watchdiff-py

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release-testpypi.yml  release.yml
tests/: test_watchdiff.py
watchdiff/: __init__.py  core.py  models.py
watchdiff/cleaner/: __init__.py  cleaner.py
watchdiff/cli/: main.py
watchdiff/diff/: __init__.py  engine.py
watchdiff/exporter/: __init__.py  exporter.py
watchdiff/fetcher/: __init__.py  browser.py  fetcher.py
watchdiff/notifier/: __init__.py  notifier.py
watchdiff/parser/: __init__.py  parser.py
watchdiff/scheduler/: __init__.py  scheduler.py
watchdiff/status_server/: __init__.py  server.py
watchdiff/store/: __init__.py  sqlite_store.py  store.py
