[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchdiff-core"
version = "0.1.2"
description = "Lightweight web change monitoring library - clean diffs, structured alerts, no AI required."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "WatchDiff Contributors" }]
keywords = ["web", "monitoring", "diff", "scraping", "change-detection", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.12",
]

[project.scripts]
watchdiff = "watchdiff.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["watchdiff"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
asyncio_mode = "auto"