[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchdiff-core"
version = "0.1.3"
description = "Lightweight web change monitoring library - clean diffs, structured alerts, no AI required."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "WatchDiff Contributors" }]
keywords = ["web", "monitoring", "diff", "scraping", "change-detection", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.24.0",
    "lxml>=4.9.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
xlsx    = ["openpyxl>=3.1.0"]
all     = ["playwright>=1.40.0", "openpyxl>=3.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "ruff>=0.1.0",
]

[project.scripts]
watchdiff = "watchdiff.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["watchdiff"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
